--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>INDEX</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
-    <h1>WELCOME TO INDEX PAGE</h1>
-</body>
-</html>
+{% extends "basic_app/base.html" %}
+
+{% block body_block %}
+<h1>WELCOME TO INDEX PAGE</h1>
+{% endblock %}
