--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -3,4 +3,6 @@
 
 {% block body_block %}
 <h1>WELCOME TO INDEX PAGE</h1>
+<h1>{{name|cut:'Hello'}}</h1>
+<h1>{{number |add:'99'}}</h1>
 {% endblock %}
